# file-faker

./: README.md  example_config.py  pyproject.toml  research.py
src/: file_faker.py
src/abstracts/: faker_config.py  field.py  file_faker.py
src/delimited_faker/: delimited_faker.py  field_builder.py  file_faker.py
